CRT colorbleed, resizing button positioning fixes

--- a/style.css
+++ b/style.css
@@ -28,10 +28,12 @@ body{
 
         body::after {
             content: "";
-            position: absolute;
+            position: fixed;
+            z-index: 10000;
             top: 0;
             left: 0;
-            
+            height: 100vh;
+            width: 100vw;
             pointer-events: none;
             background: 
             repeating-linear-gradient(
